# algorithmic-process-mining

./: .dockerignore  .env.example  .gitignore  DEBUGGING_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  conftest.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
data/normative/: o2c_sop.pnml  p2p_sop.pnml
docs/: AUDIT_REPORT.md
src/: __init__.py  cli.py  config.py
src/analysis/: __init__.py  bottlenecks.py  kpis.py  variants.py
src/conformance/: __init__.py  alignments.py  comparison.py  token_replay.py
src/data/: __init__.py  anonymizer.py  loader.py  pipeline.py  transformer.py  validator.py
src/data/generators/: __init__.py  synthetic.py
src/data/ocel/: __init__.py  loader.py
src/discovery/: __init__.py  dfg.py  heuristics.py  inductive.py
src/utils/: __init__.py  cache.py  io_utils.py  log_utils.py
src/viz/: __init__.py  charts.py  dashboard.py  petri_render.py
tests/: conftest.py  test_analysis.py  test_anonymizer.py  test_cache.py  test_charts.py  test_cli.py  test_cli_e2e.py  test_config.py  test_conformance.py  test_dashboard.py  test_discovery.py  test_generators.py  test_integration.py  test_io_utils.py  test_loader.py  test_logger.py  test_ocel_loader.py  test_petri_render.py  test_pipeline.py  test_transformer.py  test_validator.py
tests/data/: sample_o2c.csv  sample_p2p.csv
