[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithmic-process-mining"
version = "1.1.0"
description = "Algorithmic Process Mining and Conformance Checking for logistics (O2C / P2P cycles)"
requires-python = ">=3.11"
dependencies = [
    "pm4py>=2.7.22,<3.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<2.0",
    "networkx>=3.2,<4.0",
    "graphviz>=0.20,<1.0",
    "matplotlib>=3.7,<4.0",
    "plotly>=5.18,<6.0",
    "streamlit>=1.32,<2.0",
    "pyarrow>=23.0.1,<25.0",
    "scikit-learn>=1.3,<2.0",
    "requests>=2.31,<3.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3.0",
    "mypy>=1.10.0",
    "bandit>=1.7.7,<2.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
